@@ -204,7 +204,7 @@ public class SundaeSwapV2Test {
         // Find PlutusData fields
         List<String> plutusDataFields = allGeneratedSources.lines()
                 .filter(line -> line.trim().matches("private\\s+PlutusData\\s+\\w+;"))
-                .collect(Collectors.toList());
+                .toList();
 
         // Filter out legitimate PlutusData fields:
         // - extension/extensions: arbitrary extensibility data per protocol design
@@ -214,7 +214,7 @@ public class SundaeSwapV2Test {
                 .filter(line -> !line.contains("extensions")
                         && !line.contains("extension")
                         && !line.contains(" data;"))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!illegitimateFields.isEmpty()) {
             System.out.println("\n=== Found ILLEGITIMATE PlutusData fields (should be typed) ===");
